testsuite/positive/enum-constraint.n
enum MyEnum
{
  | A
  | B
  | C
}

module Program
{
  Main() : void
  {
    EnumConstraint.Method1(MyEnum.A);
    EnumConstraint.Method2(MyEnum.B);
	EnumConstraint.Method3(MyEnum.C);
  }
}

module EnumConstraint
{
  public Method1[T](x : T) : void where T : enum                { System.Console.WriteLine(x); }
  public Method2[T](x : T) : void where T : System.Enum         { System.Console.WriteLine(x); }
  public Method3[T](x : T) : void where T : struct, System.Enum { System.Console.WriteLine(x); }
}

/*
BEGIN-OUTPUT
A
B
C
END-OUTPUT
*/