testsuite/negative/enum-constraint.n
module Program
{
  Main() : void
  {
    EnumConstraint.Method1(1); //E: is not a subtype of System.Enum
    EnumConstraint.Method2(2); //E: is not a subtype of System.Enum
	EnumConstraint.Method3(3); //E: is not a subtype of System.Enum
  }
}

module EnumConstraint
{
  public Method1[T](x : T) : void where T : enum                { System.Console.WriteLine(x); }
  public Method2[T](x : T) : void where T : System.Enum         { System.Console.WriteLine(x); }
  public Method3[T](x : T) : void where T : struct, System.Enum { System.Console.WriteLine(x); }
}
